# huggingface-learning

./: README.md  notebook.ipynb  pyproject.toml  qwen_exploration.ipynb  test_installation.py  test_mps.py
docs/: part1.md  part2.md  qwen_benchmarking_section.md
nsfw-api/: .env  Dockerfile  main.py
nsfw-api/api/: __init__.py
nsfw-api/api/core/: auth.py  config.py  metrics.py  utils.py
nsfw-api/api/models/: models.py
nsfw-api/api/services/: inference.py
nsfw-api/scripts/: convert_model.py
postman/: qwen-self-hosting.postman_collection.json
qwen-api-server/: main.py  pyproject.toml
qwen_codegen_outputs-flash/: Qwen2.5-Coder-32B-Instruct.py  Qwen2.5-Coder-32B-Instruct__20250803_074142.md  Qwen2.5-Coder-7B-Instruct.py  Qwen2.5-Coder-7B-Instruct__20250803_073223.md  Qwen3-30B-A3B.py  Qwen3-30B-A3B__20250803_081100.md  Qwen3-32B.py  Qwen3-32B__20250803_075452.md  Qwen3-Coder-30B-A3B-Instruct__20250803_083822.md  main.py  qwen_codegen_summary.csv
