[project]
name = "huggingface-learning"
version = "0.1.0"
description = "Hugging Face Learning Resources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "tokenizers>=0.21.2",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "qwen-api-server",
]
